validator_derive_tests/tests/compile-fail/range/unknown_arg.stderr
error: Unknown field: `mi`. Did you mean `min`?
 --> tests/compile-fail/range/unknown_arg.rs:5:22
  |
5 |     #[validate(range(mi = 2, max = 3))]
  |                      ^^
